--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -8,6 +8,7 @@
     display: flex;
     border-radius: 20px;
     flex-direction: column-reverse;
+    background: url(~assets/images/main-image.jpg);
 }
 
 .home-content-container {
