--- a/frontend/src/pages/VideoDetails/styles.css
+++ b/frontend/src/pages/VideoDetails/styles.css
@@ -19,22 +19,43 @@
     font-size: 0.8em;
 }
 
-.video-description {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.video-description h1 {
-    font-size: 1em;
-}
-
-.video-description p {
-    font-size: 0.5em;
-}
-
 .goback-container svg {
     color: rgb(138, 129, 11);
     transform: rotate(-180deg);
     margin: 0 15px 0 5px;
 }
+
+.video-container {
+    margin-bottom: 10px;
+}
+
+.video-description {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+}
+
+.video-description h1 {
+    letter-spacing: -0.015em;
+    font-size: 0.7em;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.video-description p {
+    font-size: 0.5em;
+    color: #2b2929fd;
+}
+
+@media (min-width: 576px) {
+
+    .video-description h1 {
+        font-size: 1.2em;
+    }
+
+    .video-description p {
+        font-size: 0.8em;
+    }
+
+}
+
