--- a/frontend/src/pages/VideoDetails/styles.css
+++ b/frontend/src/pages/VideoDetails/styles.css
@@ -33,6 +33,9 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 5px;
+    border: 5px ridge rgb(180, 179, 141);
+    border-radius: 10px;
+    padding: 2px;
 }
 
 .video-description h1 {
@@ -47,6 +50,16 @@
     color: #2b2929fd;
 }
 
+.videos-comments {
+    padding: 0px 10px;
+}
+
+.videos-comments h1 {
+    text-align: center;
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
 @media (min-width: 576px) {
 
     .video-description h1 {
@@ -57,5 +70,29 @@
         font-size: 0.8em;
     }
 
+    .video-details-container {
+        padding: 20px;
+    }
+
+}
+
+@media (min-width: 768px) {
+
+    .goback-container {
+        margin-bottom: 20px;
+        margin-top: 10px;
+    }
+
+}
+
+@media (min-width:1200px) {
+
+    .video-details-card {
+        padding: 20px;
+    }
+
+    .goback-container {
+        margin-bottom: 20px;
+    }
 }
 
