--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -2,6 +2,7 @@
     padding: 10px;
     font-size: 20px;
     text-align: center;
+    background: url(~assets/images/main-image.jpg);
 }
 
 .home-card {
