--- a/frontend/src/pages/Admin/Navbar/styles.css
+++ b/frontend/src/pages/Admin/Navbar/styles.css
@@ -18,14 +18,14 @@
     justify-content: center;
     align-items: center;
     height: 50px;
-    background-color: #F2F2F2;
+    background-color: rgb(209, 205, 162);
     border-radius: 100px;
     padding: 0 10px;
+    min-width: 90px;
 }
 
 .admin-nav-item.active {
     background-color: rgb(138, 129, 11);
-    color: rgb(24, 23, 23);
 }
 
 .admin-nav-item.active p {
@@ -37,5 +37,40 @@
     font-weight: bold;
     letter-spacing: -0.05em;
     margin-bottom: 0;
-    color: #9E9E9E;
+    color: rgb(24, 23, 23);
+}
+
+@media (min-width: 576px) {
+    .admin-nav-item {
+        min-width: 120px;
+    }
+}
+
+@media (min-width: 768px) {
+    .admin-nav-item {
+        min-width: 150px;
+    }
+}
+
+@media (min-width:1200px) {
+
+    .admin-nav-container ul{
+        flex-direction: column;
+        justify-content: unset;
+    }
+
+    .admin-nav-container {
+        padding: 0;
+        width: 200px;
+        height: 89vh;  
+    }
+
+    .admin-nav-item {
+        border-radius: 0;
+        height: 80px;
+        border-bottom: 1px solid #E1E1E1;
+        justify-content: left;
+        padding-left: 20px;
+    }
+
 }
