--- a/frontend/src/components/VideoCard/styles.css
+++ b/frontend/src/components/VideoCard/styles.css
@@ -33,3 +33,35 @@
     font-weight: bold;
     margin-left: 5px;
 }
+
+@media (min-width: 576px) {
+    .video-card {
+        margin-bottom: 20px;
+        width: 255px;
+        height: 320px;
+    }
+}
+
+@media (min-width: 768px) {
+    .video-card {
+        margin-bottom: 20px;
+        width: 350px;
+        height: 320px;
+    }
+}
+
+@media (min-width: 992px) {
+    .video-card {
+        margin-bottom: 20px;
+        width: 300px;
+        height: 320px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .video-card {
+        margin-bottom: 20px;
+        width: 270px;
+        height: 320px;
+    }
+}
