Starting dev /admin/auth

--- a/frontend/src/components/VideoCard/styles.css
+++ b/frontend/src/components/VideoCard/styles.css
@@ -65,3 +65,11 @@
         height: 320px;
     }
 }
+
+@media (min-width: 1366px) {
+    .video-card {
+        margin-bottom: 20px;
+        width: 310px;
+        height: 320px;
+    }
+}
